[package]
name = "tf_rosrust"
version = "0.0.5"
authors = [
    "Arjo Chakravarty <arjo129@gmail.com>",
    "Michael Maerz <maerz@magazino.eu>",
    "Mitsuharu Kojima <kojima@smilerobotics.com>",
    "Timothy Shan <timothy_shan@outlook.com>",
]
edition = "2021"
description = "This is a rust port of the [ROS tf library](http://wiki.ros.org/tf). It is intended for being used in robots to help keep track of multiple coordinate frames and is part of a larger suite of rust libraries that provide support for various robotics related functionality."
license = "MIT OR Apache-2.0"
keywords = ["transforms", "robotics", "ROS", "tf"]
repository = "https://github.com/shanmo/ros_tf2_rust.git"
homepage = "https://github.com/shanmo/ros_tf2_rust.git"

[dependencies]
nalgebra = "0.29"
thiserror = "1.0"
r2r = "0.6.2"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }